# rust-keylime

./: .gitignore  .gitleaks.toml  .packit.yaml  .rustfmt.toml  .travis.yml  CODEOWNERS  Cargo.toml  Cargo.toml.test.do.not.commit  GNUmakefile  MAINTAINERS  NVChip  README.md  build.rs  codecov.yml  config.yml  docker-compose.yml  keylime-agent.conf  keylime.conf  license-header.tpl  packit-ci.fmf  test.json  tpmdata.json
.github/: CODEOWNERS  dependabot.yml  stale.yml
.github/workflows/: cargo-audit.yml  cargo-machete.yml  compile-no-warnings.yml  container.yml  keylime-bot.yml  mockoon.yaml  rpm.yml  rust.yml  submit-HEAD-coverage.yaml  submit-PR-coverage.yaml
.travis/: nopanic.py
archive/: main.rs  tpm.rs
common/: Cargo.toml
common/src/: lib.rs
debian/: keylime_agent.postinst
docker/fedora/: fedora.Dockerfile  keylime_py.Dockerfile  keylime_rust.Dockerfile  wait.sh
docker/release/: Dockerfile.distroless  Dockerfile.fedora  Dockerfile.wolfi  build_locally.sh
ima-policy/: README  ima-policy
keylime/: Cargo.toml
keylime-agent/: Cargo.toml
keylime-agent/src/: agent_handler.rs  agent_registration.rs  api.rs  common.rs  config.rs  crypto.rs  error.rs  errors_handler.rs  keys_handler.rs  main.rs  notifications_handler.rs  payloads.rs  permissions.rs  quotes_handler.rs  registrar_agent.rs  revocation.rs  secure_mount.rs  serialization.rs  tpm.rs
keylime-agent/test-data/: test-rsa.pem  tpmdata_test.json
keylime-agent/tests/actions/: local_action_hello.py  local_action_hello_shell.sh  shim.py
keylime-ima-emulator/: Cargo.toml
keylime-ima-emulator/src/: main.rs
keylime-macros/: Cargo.toml
keylime-macros/src/: lib.rs
keylime-macros/tests/: runtime.rs  test_define_view_trait.rs
keylime-macros/tests/define_view_trait/: error_missing_for_struct.rs  error_missing_for_struct.stderr  error_missing_transform_err.rs  error_missing_transform_err.stderr  error_missing_transform_fn.rs  error_missing_transform_fn.stderr  error_tuple_struct.rs  error_tuple_struct.stderr  sanity.rs
keylime-push-model-agent/: Cargo.toml
keylime-push-model-agent/doc/fsm/: mermaid_fsm.md
keylime-push-model-agent/src/: attestation.rs  auth.rs  context_info_handler.rs  header_validation.rs  json_dump.rs  main.rs  privileged_resources.rs  registration.rs  response_handler.rs  state_machine.rs  struct_filler.rs  url_selector.rs
keylime-push-model-agent/test-data/: evidence_handling_request.json  registrar.json  session_request.json  verifier.json
keylime-push-model-agent/tests/: evidence_supported_attestation_request.json  test-keylime-push-model-agent.rs
keylime/src/: agent_data.rs  agent_identity.rs  agent_registration.rs  algorithms.rs  auth.rs  boot_time.rs  cert.rs  cmw.rs  context_info.rs  crypto.rs  device_id.rs  endian.rs  error.rs  file_ops.rs  global_config.rs  hash_ek.rs  header_validation.rs  hostname.pest  hostname_parser.rs  https_client.rs  ip.pest  ip_parser.rs  json_wrapper.rs  keylime_error.rs  lib.rs  list.pest  list_parser.rs  permissions.rs  quote.rs  registrar_client.rs  resilient_client.rs  rfc3986_compliance.rs  secure_mount.rs  serialization.rs  tpm.rs  version.rs
keylime/src/config/: base.rs  env.rs  error.rs  file_config.rs  mod.rs  push_model.rs  push_model_config.rs  singleton.rs  testing.rs
keylime/src/crypto/: auth_tag.rs  encrypted_data.rs  symmkey.rs  x509.rs
keylime/src/ima/: entry.rs  ima_log.rs  measurement_list.rs  mod.rs
keylime/src/structures/: capabilities_negotiation.rs  evidence_handling.rs  mod.rs  sessions.rs
keylime/src/uefi/: mod.rs  uefi_log_handler.rs
keylime/test-data/: ima_log.txt  invalid_ima_log.txt  prime256v1.cert.pem  prime256v1.pem
keylime/tests/: config_env_vars.rs  config_singleton_integration.rs
keylime_node/: Cargo.toml
keylime_node/src/: main.rs
keylimectl/: Cargo.toml  FEATURE_PARITY.md  ROADMAP.md  keylimectl.conf
keylimectl/src/: api_versions.rs  config.rs  config_main.rs  error.rs  main.rs  output.rs
keylimectl/src/client/: agent.rs  base.rs  error.rs  factory.rs  mod.rs  registrar.rs  verifier.rs
keylimectl/src/commands/: agent.rs  configure.rs  error.rs  list.rs  measured_boot.rs  mod.rs  policy.rs
keylimectl/src/commands/agent/: add.rs  attestation.rs  helpers.rs  mod.rs  reactivate.rs  remove.rs  status.rs  types.rs  update.rs
keylimectl/src/commands/info/: agent_info.rs  mod.rs  registrar_info.rs  self_info.rs  tls_info.rs  verifier_info.rs
keylimectl/src/commands/policy/: convert.rs  crud.rs  generate.rs  mod.rs  sign.rs  validate.rs  wizard_measured_boot.rs  wizard_runtime.rs  wizard_tpm.rs
keylimectl/src/commands/verify/: evidence.rs  mod.rs  wizard_evidence.rs
keylimectl/src/config/: error.rs  mod.rs  singleton.rs  validation.rs
keylimectl/src/policy_tools/: conversion.rs  digest.rs  filesystem.rs  gpg_verify.rs  ima_parser.rs  initrd.rs  measured_boot_gen.rs  measured_boot_policy.rs  merge.rs  mod.rs  privilege.rs  rpm_repo.rs  runtime_policy.rs  tpm_policy.rs  tpm_policy_gen.rs  uefi_event_data.rs  validation.rs
keylimectl/src/policy_tools/dsse/: ecdsa_backend.rs  mod.rs  x509_backend.rs
keylimectl/tests/: info.rs  no_args.rs  policy_tools.rs
rpm/: README.md  python-keylime.spec
rpm/centos/: keylime-agent-rust.spec  rust-keylime-metadata.patch
rpm/fedora/: keylime-agent-rust.spec  rust-keylime-metadata.patch
scripts/: download_packit_coverage.sh
src/: .rustfmt.toml  algorithms.rs  checkci.rs  cmd_exec.rs  common.rs  config.rs  crypto.rs  error.rs  errors_handler.rs  handlers.rs  hash.rs  hashlist.rs  ima.rs  ima_emulator.rs  ima_entry.rs  keylime_error.rs  keys_handler.rs  lib.rs  main.rs  notifications_handler.rs  permissions.rs  quotes_handler.rs  registrar_agent.rs  revocation.rs  secure_mount.rs  tpm.rs  tpm2.rs  tpm_exec.rs  tpm_initialize.rs  tpm_nvram.rs  version_handler.rs
src/tpm/: highlevel.rs  (+1 more)
test-data/: revocation.sig  test-cert.pem  test-quote.txt  test-rsa.sig
tests/: Dockerfile  ca.conf  common_tests.sh  generate-iak-idevid-certs.sh  mockoon_registrar_tests.sh  mockoon_tests.sh  nopanic.ci  run.sh  seccomp-profile.json  setup_swtpm.sh
(+7 files in other folders)
