[workspace]
members = [
    "keylime",
    "keylime-agent",
    "keylime-ima-emulator",
]
resolver = "2"

[workspace.package]
authors = ["Keylime Authors"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/keylime/rust-keylime"
version = "0.2.4"

[workspace.dependencies]
actix-rt = "2"
actix-web =  { version = "4", default-features = false, features = ["macros", "openssl"] }
base64 = "0.21"
cfg-if = "1"
clap = { version = "4.3", features = ["derive"] }
compress-tools = "0.12"
config = { version = "0.13", default-features = false, features = ["toml"] }
futures = "0.3.6"
glob = "0.3"
hex = "0.4"
keylime = { version = "=0.2.4", path = "keylime" }
libc = "0.2.43"
log = "0.4"
openssl = "0.10.15"
pest = "2.6"
pest_derive = "2.6"
picky-asn1-der = "0.4"
picky-asn1-x509 = "0.12"
pretty_env_logger = "0.4"
reqwest = {version = "0.11", default-features = false, features = ["json"]}
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = { version = "1.0", features = ["raw_value"] }
signal-hook = "0.3"
static_assertions = "1"
tempfile = "3.4.0"
thiserror = "1.0"
tokio = {version = "1.24", features = ["rt", "sync", "macros"]}
tss-esapi = {version = "7.4.0", features = ["generate-bindings"]}
uuid = {version = "1.3", features = ["v4"]}
