[workspace]
members = [
    "keylime",
    "keylime-agent",
    "keylime-ima-emulator",
    "keylime-push-model-agent",
]
resolver = "2"

[workspace.package]
authors = ["Keylime Authors"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/keylime/rust-keylime"
version = "0.2.7"

[workspace.dependencies]
actix-rt = "2"
actix-web =  { version = "4", default-features = false, features = ["macros", "openssl"] }
anyhow = { version = "1.0", features = ["backtrace"] }
assert_cmd = { version = "2.0.16" }
base64 = "0.22"
byteorder = "1.5.0"
cfg-if = "1"
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
config = { version = "0.13", default-features = false, features = ["toml"] }
futures = "0.3.6"
glob = "0.3"
hex = "0.4"
keylime = { version = "=0.2.7", path = "keylime" }
libc = "0.2.43"
log = "0.4"
once_cell = "1.19.0"
openssl = "0.10.15"
pest = "2"
pest_derive = "2"
picky-asn1-der = "0.4"
picky-asn1-x509 = "0.12"
predicates = { version = "3.1.3" }
pretty_env_logger = "0.5"
reqwest = {version = "0.12", default-features = false, features = ["json", "native-tls"]}
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = { version = "1.0", features = ["raw_value"] }
signal-hook = "0.3"
static_assertions = "1"
tempfile = "3.4.0"
thiserror = "2.0"
tokio = {version = "1", features = ["rt", "sync", "macros"]}
tss-esapi = {version = "7.6.0", features = ["generate-bindings"]}
uuid = {version = "1.3", features = ["v4"]}
zip = {version = "0.6", default-features = false, features= ["deflate"]}
