[package]
authors = ["Keylime Authors"]
edition = "2021"
name = "keylime_agent"
version = "0.2.0"
license = "Apache-2.0"
description = "Rust agent for Keylime"
repository = "https://github.com/keylime/rust-keylime"

[dependencies]
actix-web =  { version = "4", features = ["openssl"] }
base64 = "0.13"
cfg-if = "1"
clap = { version = "3.2", features = ["derive"] }
compress-tools = "0.12"
config = { version = "0.13", features = ["toml"] }
futures = "0.3.6"
glob = "0.3"
hex = "0.4"
keylime = { path = "../keylime" }
libc = "0.2.43"
log = "0.4"
openssl = "0.10.15"
picky-asn1-der = "0.3.1"
picky-asn1-x509 = "0.6.1"
pretty_env_logger = "0.4"
reqwest = {version = "0.11", features = ["json"]}
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = { version = "1.0", features = ["raw_value"] }
static_assertions = "1"
tempfile = "3.4.0"
tokio = {version = "1.24", features = ["rt", "sync"]}
tss-esapi = {version = "7.2.0", features = ["generate-bindings"]}
thiserror = "1.0"
uuid = {version = "1.3", features = ["v4"]}
zmq = {version = "0.9.2", optional = true}
# wiremock was moved to be a regular dependency because optional
# dev-dependencies are not supported
# see: https://github.com/rust-lang/cargo/issues/1596
wiremock = {version = "0.5", optional = true}

[dev-dependencies]
actix-rt = "2"

[features]
# The features enabled by default
default = []
# this should change to dev-dependencies when we have integration testing
testing = ["wiremock"]
# Whether the agent should be compiled with support to listen for notification
# messages on ZeroMQ
#
# This feature is deprecated and will be removed on next major release
with-zmq = ["zmq"]
# Whether the agent should be compiled with support for python revocation
# actions loaded as modules, which is the only kind supported by the python
# agent (unless the enhancement-55 is implemented). See:
# https://github.com/keylime/enhancements/blob/master/55_revocation_actions_without_python.md
#
# This feature is deprecated and will be removed on next major release
legacy-python-actions = []

[package.metadata.deb]
section = "net"
assets = [
  ["target/release/keylime_agent", "usr/bin/", "755"],
  ["../README.md", "usr/share/doc/keylime-agent/README", "644"],
  ["../keylime-agent.conf", "/etc/keylime/agent.conf", "640"],
  ["../dist/systemd/system/var-lib-keylime-secure.mount", "lib/systemd/system/var-lib-keylime-secure.mount", "644"],
  ["../tests/actions/shim.py", "usr/libexec/keylime/shim.py", "755"],
]
maintainer-scripts = "../debian/"
systemd-units = { unit-scripts = "../dist/systemd/system/", enable = true }
