[package]
name = "keylime_agent"
description = "Rust agent for Keylime"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
actix-web.workspace = true
base64.workspace = true
cfg-if.workspace = true
clap.workspace = true
compress-tools.workspace = true
config.workspace = true
futures.workspace = true
glob.workspace = true
hex.workspace = true
keylime.workspace = true
libc.workspace = true
log.workspace = true
openssl.workspace = true
picky-asn1-der.workspace = true
picky-asn1-x509.workspace = true
pretty_env_logger.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
static_assertions.workspace = true
tempfile.workspace = true
tokio.workspace = true
tss-esapi.workspace = true
thiserror.workspace = true
uuid.workspace = true
zmq = {version = "0.9.2", optional = true}
# wiremock was moved to be a regular dependency because optional
# dev-dependencies are not supported
# see: https://github.com/rust-lang/cargo/issues/1596
wiremock = {version = "0.5", optional = true}

[dev-dependencies]
actix-rt.workspace = true

[features]
# The features enabled by default
default = []
# this should change to dev-dependencies when we have integration testing
testing = ["wiremock"]
# Whether the agent should be compiled with support to listen for notification
# messages on ZeroMQ
#
# This feature is deprecated and will be removed on next major release
with-zmq = ["zmq"]
# Whether the agent should be compiled with support for python revocation
# actions loaded as modules, which is the only kind supported by the python
# agent (unless the enhancement-55 is implemented). See:
# https://github.com/keylime/enhancements/blob/master/55_revocation_actions_without_python.md
#
# This feature is deprecated and will be removed on next major release
legacy-python-actions = []

[package.metadata.deb]
section = "net"
assets = [
  ["target/release/keylime_agent", "usr/bin/", "755"],
  ["../README.md", "usr/share/doc/keylime-agent/README", "644"],
  ["../keylime-agent.conf", "/etc/keylime/agent.conf", "640"],
  ["../dist/systemd/system/var-lib-keylime-secure.mount", "lib/systemd/system/var-lib-keylime-secure.mount", "644"],
  ["../tests/actions/shim.py", "usr/libexec/keylime/shim.py", "755"],
]
maintainer-scripts = "../debian/"
systemd-units = { unit-scripts = "../dist/systemd/system/", enable = true }
