[package]
name = "keylime_ima_emulator"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3", features = ["derive"] }
hex = "0.4"
keylime = { path = "../keylime" }
log = "0.4"
openssl = "0.10.15"
signal-hook = "0.3"
thiserror = "1.0"
tss-esapi = {version = "7.2.0", features = ["generate-bindings"]}
