[package]
name = "keylime_ima_emulator"
description = "IMA emulator for Keylime"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
clap.workspace = true
hex.workspace = true
keylime.workspace = true
log.workspace = true
openssl.workspace = true
signal-hook.workspace = true
thiserror.workspace = true
tss-esapi.workspace = true
