[package]
name = "keylime_push_model_agent"
description = "Rust agent for Keylime (Push Model)"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
actix-web.workspace = true
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
clap.workspace = true
keylime.workspace = true
log.workspace = true
pretty_env_logger.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
url.workspace = true

[dev-dependencies]
actix-rt.workspace = true
tempfile.workspace = true
wiremock = {version = "0.6"}
# Dependencies for examples (auth_test)
tracing = "0.1"
tracing-subscriber = "0.3"


[features]
# The features enabled by default
default = []
testing = ["keylime/testing"]
legacy-python-actions = []

[package.metadata.deb]
section = "net"
assets = [
  ["target/release/keylime_push_model_agent", "usr/bin/", "755"],
  ["../README.md", "usr/share/doc/keylime-agent/README", "644"],
  ["../keylime-agent.conf", "/etc/keylime/agent.conf", "640"],
]
maintainer-scripts = "../debian/"
systemd-units = { unit-scripts = "../dist/systemd/system/", enable = true }
