[package]
name = "keylime"
description = "Shared utilities for Keylime crates"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
base64.workspace = true
hex.workspace = true
log.workspace = true
openssl.workspace = true
pest.workspace = true
pest_derive.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
static_assertions.workspace = true
thiserror.workspace = true
tss-esapi.workspace = true
picky-asn1-der.workspace = true
picky-asn1-x509.workspace = true
tokio.workspace = true
# wiremock was moved to be a regular dependency because optional
# dev-dependencies are not supported
# see: https://github.com/rust-lang/cargo/issues/1596
wiremock = {version = "0.6", optional = true}
chrono = { version = "0.4.40", features = ["serde"] }

[dev-dependencies]
tempfile.workspace = true
actix-rt.workspace = true

[features]
# This feature enables tests that require a TPM and the TCTI environment
# variable properly configured
# This should change to dev-dependencies when we have integration testing
testing = ["wiremock"]
