[package]
name = "keylime"
description = "Shared utilities for Keylime crates"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
actix-web.workspace = true
anyhow.workspace = true
base64.workspace = true
byteorder.workspace = true
chrono.workspace = true
config.workspace = true
glob.workspace = true
hex.workspace = true
libc.workspace = true
keylime-macros.workspace = true
log.workspace = true
once_cell.workspace = true
openssl.workspace = true
pest.workspace = true
pest_derive.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
static_assertions.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tss-esapi.workspace = true
picky-asn1-der.workspace = true
picky-asn1-x509.workspace = true
tokio.workspace = true
# wiremock was moved to be a regular dependency because optional
# dev-dependencies are not supported
# see: https://github.com/rust-lang/cargo/issues/1596
wiremock = {version = "0.6", optional = true}
uuid.workspace = true
zip.workspace = true
zmq = {version = "0.9.2", optional = true}

[dev-dependencies]
tempfile.workspace = true
actix-rt.workspace = true

[features]
# This feature enables tests that require a TPM and the TCTI environment
# variable properly configured
# This should change to dev-dependencies when we have integration testing
testing = ["wiremock"]
# This feature is deprecated and will be removed on next major release
with-zmq = ["zmq"]
