[package]
name = "keylime"
description = "Shared utilities for Keylime crates"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
actix-web.workspace = true
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
byteorder.workspace = true
chrono.workspace = true
config.workspace = true
glob.workspace = true
hex.workspace = true
http.workspace = true
httpdate.workspace = true
libc.workspace = true
keylime-macros.workspace = true
log.workspace = true
once_cell.workspace = true
openssl.workspace = true
pest.workspace = true
pest_derive.workspace = true
rand.workspace = true
reqwest.workspace = true
reqwest-middleware.workspace = true
reqwest-retry.workspace = true
retry-policies.workspace = true
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
static_assertions.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tss-esapi.workspace = true
picky-asn1-der.workspace = true
picky-asn1-x509.workspace = true
tokio.workspace = true
url.workspace = true
uuid.workspace = true
zip.workspace = true
zmq = {version = "0.9.2", optional = true}

[dev-dependencies]
tempfile.workspace = true
actix-rt.workspace = true
wiremock = {version = "0.6"}

[features]
testing = []
# This feature is deprecated and will be removed on next major release
with-zmq = ["zmq"]
