[package]
name = "keylimectl"
description = "Command-line tool for Keylime remote attestation"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[[bin]]
name = "keylimectl"
path = "src/main.rs"

[features]
default = []
tpm-quote-validation = ["dep:tss-esapi"]

[dependencies]
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
clap.workspace = true
config.workspace = true
hex.workspace = true
keylime.workspace = true
log.workspace = true
openssl.workspace = true
pretty_env_logger.workspace = true
reqwest.workspace = true
reqwest-middleware.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = {workspace = true, features = ["rt-multi-thread"]}
tss-esapi = {workspace = true, optional = true}
uuid.workspace = true

[lints.clippy]
all = "deny"
must_use_candidate = "warn"

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
toml = "0.8"
