[package]
name = "keylimectl"
description = "Command-line tool for Keylime remote attestation"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[[bin]]
name = "keylimectl"
path = "src/main.rs"

[features]
default = ["api-v2", "api-v3", "wizard"]
api-v2 = []
api-v3 = []
tpm-local = ["dep:tss-esapi"]
tpm-quote-validation = ["dep:tss-esapi"]
wizard = ["dep:dialoguer"]

[dependencies]
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
clap.workspace = true
config.workspace = true
hex.workspace = true
keylime.workspace = true
log.workspace = true
openssl.workspace = true
pretty_env_logger.workspace = true
reqwest.workspace = true
reqwest-middleware.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = {workspace = true, features = ["rt-multi-thread"]}
tss-esapi = {workspace = true, optional = true}
uuid.workspace = true
dialoguer = { version = "0.12", optional = true }
toml = "0.8"
zeroize = "1"

[lints.clippy]
all = "deny"
must_use_candidate = "warn"

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
